--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ code/game/gamemodes/technomancer/spells/projectile/overload.dm
 code/game/gamemodes/technomancer/spells/projectile/overload.dm
 code/modules/client/preference_setup/loadout/loadout_xeno.dm
 temp.dmi
+/config/alienwhitelist.txt
